# leaky

./: .gitignore  Cargo.toml  README.md  deps  deps.txt  docker-compose.yml  hello  nginx.conf  nginx.dev.conf
.github/: settings.yml
.github/workflows/: advisories.yml  audits.yml  build-push-deploy.yaml  ci.yml  containers.yaml  deploy.yml
.leaky/: leaky.state
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  cli.rs  main.rs  mod.rs  state.rs
crates/cli/src/ops/: init.rs  mod.rs  utils.rs
crates/cli/test/src/: cli.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: block_store.rs  ipfs_rpc.rs  leaky.rs  leaky_api.rs  lib.rs  mount.rs
crates/common/src/api/: client.rs  mod.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: context.rs  integration_test.rs  mod.rs
crates/integration-tests/tests/fixtures/writing/: backpack-life.md.obj.md  by_the_ocean.md  by_the_ocean.obj.md  schema.md
crates/leaky-cli/: Cargo.toml
crates/leaky-cli/_tests/: integration_test.rs  test_config.rs
crates/leaky-cli/src/: args.rs  change_log.rs  main.rs  state.rs
crates/leaky-cli/src/api/: client.rs
crates/leaky-cli/src/ops/: add.rs  diff.rs  init.rs  key.rs  mod.rs  object.rs  pull.rs  push.rs  stat.rs  tag.rs  utils.rs
crates/leaky-common/: Cargo.toml  build.rs
crates/leaky-common/src/: ipfs_rpc.rs  lib.rs  mount.rs
crates/leaky-common/src/api/: client.rs  error.rs
crates/leaky-common/src/types/: mod.rs  (+6 more)
crates/leaky-server/: Cargo.toml
crates/leaky-server/src/: lib.rs
data/: .gitignore
data/pems/: .gitignore  leaky.pem  leaky.prv
example/: backpack-life.md
example/writing/: .schema
example/writing/.obj/: .backpack-life.md.json  .by_the_ocean.md.json
iac/: .env.sample
iac/ansible/: firewall.yml  service.yml
iac/ansible/service/: docker-compose.yml
iac/ansible/utils/: create_service_user.tasks.yml
iac/hosts/digitalOcean/: production
pems/: leaky.pem  leaky.prv
src/: ipfs_rpc.rs  leaky.rs  lib.rs  main.rs  test
src/.leaky/: leaky.cache  leaky.state
src/backend/: client.rs  device.rs  gateway.rs  ipfs_rpc.rs  mod.rs
src/backend/eth/: RootCid.sol  mod.rs  root_cid.rs
src/cli/: cli.rs  mod.rs
src/cli/.leaky/: leaky.conf  leaky.state
src/cli/ops/: add.rs  change_log.rs  diff.rs  health.rs  init.rs  mod.rs  push.rs  stage.rs  tag.rs  utils.rs
src/eth/: cid_token.rs
src/tests/.leaky/: leaky.state
src/traits/: blockable.rs  mod.rs
src/types/: manifest.rs  mod.rs  node.rs  object.rs  version.rs
(+22 files in other folders)
