[package]
name = "dumb-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
futures-util = "0.3.30"
http = "^0.2"
ipfs-api-backend-hyper = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
url = "2.5.0"
wnfs = "0.2.1"
