[package]
name = "leaky"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-recursion = "1.1.0"
bytes = "1.5.0"
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
http = "^0.2"
ipfs-api-backend-hyper = { git = "https://github.com/amiller68/rust-ipfs-api" }
libipld = "0.16.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
time = "0.3.34"
tokio = { version = "1.10.0", features = ["full"] }
url = "2.5.0"
wnfs = "0.2.1"
