[package]
name = "leaky"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "leaky"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-recursion = "1.1.0"
blake3 = { version = "^1", features = ["serde"] }
bytes = "1.5.0"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
fs-tree = "0.5.5"
futures-util = "0.3.30"
http = "^0.2"
ipfs-api-backend-hyper = { git = "https://github.com/amiller68/rust-ipfs-api", features = [
  "with-hyper-tls",
] }
libipld = "0.16.0"
pico-args = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
time = "0.3.34"
tokio = { version = "1.10.0", features = ["full"] }
url = { version = "^2", features = ["serde"] }
wnfs = "0.2.1"
