[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
fs_extra = "1.3"
predicates = "3.0"
leaky-server = { path = "../leaky-server" }
leaky-cli = { path = "../leaky-cli" }

[dependencies]
rand = "0.8" 